# easysnowdata

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  index.html  index.md  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  requirements.txt  requirements_dev.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  data_source_health.yml  docs-build.yml  docs.yml  installation.yml  pypi.yml  ubuntu.yml
automatic_weather_stations/: index.html
changelog/: index.html
common/: common.md  index.html
contributing/: contributing.md  index.html
data_status/: history.json
docs/: automatic_weather_stations.md  hydroclimatology.md  hydrology.md  index.md  installation.md  remote_sensing.md  topography.md  usage.md  utils.md
docs/examples/: automatic_weather_station_examples.ipynb  automatic_weather_stations_examples.ipynb  hydroclimatology_examples.ipynb  hydrology_examples.ipynb  remote_sensing_examples.ipynb  topography_examples.ipynb
easysnowdata/: __init__.py  automatic_weather_stations.py  easysnowdata.md  hydroclimatology.py  hydrology.py  index.html  remote_sensing.py  topography.py  utils.py
examples/: mt_rainier.geojson
examples/how_easy/: how_easy.ipynb  index.html
examples/hydroclimatology_examples/: hydroclimatology_examples.ipynb  index.html
examples/hydrology_examples/: index.html
examples/intro/: index.html
examples/topography_examples/: index.html  topography_examples.ipynb
faq/: index.html
hydroclimatology/: index.html
hydrology/: index.html
installation/: index.html  installation.md
remote_sensing/: index.html  remote_sensing.md
scripts/: check_data_sources.py  update_readme_status.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_automatic_weather_stations.py  test_credentials.py  test_easysnowdata.py  test_hydroclimatology.py  test_remote_sensing.py  test_topography.py  test_utils.py
topography/: index.html
usage/: index.html
utils/: index.html
