[project]
name = "easysnowdata"
version = "0.0.23"
description = "A Python package to easily retrieve data relevant to snow science"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "Eric Gagliano", email = "egagli@uw.edu" }]
keywords = ["snow", "hydrology", "remote-sensing", "climate", "geospatial"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "geopandas",
    "rasterio",
    "xarray",
    "rioxarray",
    "shapely",
    "pystac-client",
    "planetary-computer",
    "odc-stac",
    "earthengine-api",
    "xee",
    "beautifulsoup4",
    "py3dep",
    "earthaccess",
    "contextily",
    "folium",
    "mapclassify",
    "lxml",
    "scikit-image",
    "tqdm",
    "dask",
]

[project.urls]
Homepage = "https://github.com/egagli/easysnowdata"
Documentation = "https://egagli.github.io/easysnowdata"
Repository = "https://github.com/egagli/easysnowdata"
"Bug Tracker" = "https://github.com/egagli/easysnowdata/issues"

[tool.setuptools.packages.find]
include = ["easysnowdata*"]
exclude = ["docs*", "tests*", "scripts*"]

[tool.bumpversion]
current_version = "0.0.23"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pixi.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "easysnowdata/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line too long — handled by formatter
    "F841",  # local variable assigned but never used
]

[tool.ruff.lint.isort]
known-first-party = ["easysnowdata"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_earthengine: marks tests that require a valid EARTHENGINE_TOKEN env var",
    "requires_earthaccess: marks tests that require EARTHDATA_USERNAME and EARTHDATA_PASSWORD env vars",
    "integration: marks slow integration tests that make live external API calls",
]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
